@@ -4,46 +4,65 @@ import com.example.tp_air.dto.AnnonceDTO;
 import com.example.tp_air.dto.PagedResponse;
 import com.example.tp_air.dto.PatchAnnonceDTO;
 import com.example.tp_air.models.Annonce;
+import com.example.tp_air.models.AnnonceStatus;
+import com.example.tp_air.models.Category;
 import com.example.tp_air.models.User;
 import com.example.tp_air.exceptions.BusinessException;
 import com.example.tp_air.exceptions.ForbiddenException;
 import com.example.tp_air.exceptions.NotFoundException;
+import com.example.tp_air.mappers.AnnonceMapper;
 import com.example.tp_air.repositories.AnnonceRepository;
+import com.example.tp_air.repositories.CategoryRepository;
 import com.example.tp_air.repositories.UserRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Service
+@Transactional
 public class AnnonceService {
 
     private static final Logger log = LoggerFactory.getLogger(AnnonceService.class);
 
     private final AnnonceRepository annonceRepository;
     private final UserRepository userRepository;
+    private final CategoryRepository categoryRepository;
+    private final AnnonceMapper annonceMapper;
 
-    public AnnonceService() {
-        this.annonceRepository = new AnnonceRepository();
-        this.userRepository = new UserRepository();
-    }
-
-    // Constructor for testing (injection)
-    public AnnonceService(AnnonceRepository annonceRepository, UserRepository userRepository) {
+    public AnnonceService(AnnonceRepository annonceRepository, UserRepository userRepository,
+            CategoryRepository categoryRepository, AnnonceMapper annonceMapper) {
         this.annonceRepository = annonceRepository;
         this.userRepository = userRepository;
+        this.categoryRepository = categoryRepository;
+        this.annonceMapper = annonceMapper;
     }
 
+    @Transactional(readOnly = true)
     public PagedResponse<AnnonceDTO> findAll(int page, int size) {
-        List<AnnonceDTO> dtos = annonceRepository.findAll(page, size)
-                .stream().map(AnnonceDTO::fromEntity).collect(Collectors.toList());
-        long total = annonceRepository.countAll();
-        return new PagedResponse<>(dtos, page, size, total);
+        Page<Annonce> annoncePage = annonceRepository.findAll(
+                PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt")));
+
+        List<AnnonceDTO> dtos = annoncePage.getContent().stream()
+                .map(annonceMapper::toDto)
+                .toList();
+
+        return new PagedResponse<>(dtos, page, size, annoncePage.getTotalElements());
     }
 
+    @Transactional(readOnly = true)
     public AnnonceDTO findById(Long id) {
         return annonceRepository.findById(id)
-                .map(AnnonceDTO::fromEntity)
+                .map(annonceMapper::toDto)
                 .orElseThrow(() -> new NotFoundException("Annonce not found with id: " + id));
     }
 
@@ -51,18 +70,20 @@ public class AnnonceService {
         User author = userRepository.findById(authorId)
                 .orElseThrow(() -> new NotFoundException("User not found with id: " + authorId));
 
-        Annonce annonce = Annonce.builder()
-                .title(dto.getTitle())
-                .description(dto.getDescription())
-                .price(dto.getPrice())
-                .category(dto.getCategory())
-                .status(Annonce.Status.DRAFT)
-                .author(author)
-                .build();
+        Category category = null;
+        if (dto.getCategory() != null) {
+            category = categoryRepository.findByLabel(dto.getCategory())
+                    .orElseThrow(() -> new NotFoundException("Category not found with label: " + dto.getCategory()));
+        }
+
+        Annonce annonce = annonceMapper.toEntity(dto);
+        annonce.setStatus(AnnonceStatus.DRAFT);
+        annonce.setAuthor(author);
+        annonce.setCategory(category);
 
         Annonce saved = annonceRepository.save(annonce);
         log.info("Created annonce id={} by user={}", saved.getId(), author.getUsername());
-        return AnnonceDTO.fromEntity(saved);
+        return annonceMapper.toDto(saved);
     }
 
     public AnnonceDTO update(Long id, AnnonceDTO dto, Long currentUserId) {
@@ -72,20 +93,26 @@ public class AnnonceService {
         checkAuthor(annonce, currentUserId);
         checkNotPublished(annonce);
 
-        annonce.setTitle(dto.getTitle());
-        annonce.setDescription(dto.getDescription());
-        annonce.setPrice(dto.getPrice());
-        annonce.setCategory(dto.getCategory());
+        annonceMapper.updateEntityFromDto(dto, annonce);
+
+        if (dto.getCategory() != null) {
+            Category category = categoryRepository.findByLabel(dto.getCategory())
+                    .orElseThrow(() -> new NotFoundException("Category not found with label: " + dto.getCategory()));
+            annonce.setCategory(category);
+        }
 
         if (dto.getStatus() != null) {
-            Annonce.Status newStatus = parseStatus(dto.getStatus());
+            AnnonceStatus newStatus = parseStatus(dto.getStatus());
             validateStatusTransition(annonce.getStatus(), newStatus);
+            if (newStatus == AnnonceStatus.ARCHIVED) {
+                checkIsAdmin();
+            }
             annonce.setStatus(newStatus);
         }
 
-        Annonce updated = annonceRepository.update(annonce);
+        Annonce updated = annonceRepository.save(annonce);
         log.info("Updated annonce id={} by user={}", id, currentUserId);
-        return AnnonceDTO.fromEntity(updated);
+        return annonceMapper.toDto(updated);
     }
 
     public AnnonceDTO patch(Long id, PatchAnnonceDTO dto, Long currentUserId) {
@@ -95,23 +122,26 @@ public class AnnonceService {
         checkAuthor(annonce, currentUserId);
         checkNotPublished(annonce);
 
-        if (dto.getTitle() != null)
-            annonce.setTitle(dto.getTitle());
-        if (dto.getDescription() != null)
-            annonce.setDescription(dto.getDescription());
-        if (dto.getPrice() != null)
-            annonce.setPrice(dto.getPrice());
-        if (dto.getCategory() != null)
-            annonce.setCategory(dto.getCategory());
+        annonceMapper.patchEntityFromDto(dto, annonce);
+
+        if (dto.getCategory() != null) {
+            Category category = categoryRepository.findByLabel(dto.getCategory())
+                    .orElseThrow(() -> new NotFoundException("Category not found with label: " + dto.getCategory()));
+            annonce.setCategory(category);
+        }
+
         if (dto.getStatus() != null) {
-            Annonce.Status newStatus = parseStatus(dto.getStatus());
+            AnnonceStatus newStatus = parseStatus(dto.getStatus());
             validateStatusTransition(annonce.getStatus(), newStatus);
+            if (newStatus == AnnonceStatus.ARCHIVED) {
+                checkIsAdmin();
+            }
             annonce.setStatus(newStatus);
         }
 
-        Annonce updated = annonceRepository.update(annonce);
+        Annonce updated = annonceRepository.save(annonce);
         log.info("Patched annonce id={} by user={}", id, currentUserId);
-        return AnnonceDTO.fromEntity(updated);
+        return annonceMapper.toDto(updated);
     }
 
     public void delete(Long id, Long currentUserId) {
@@ -120,16 +150,13 @@ public class AnnonceService {
 
         checkAuthor(annonce, currentUserId);
 
-        // Business rule: must be ARCHIVED before deletion
-        if (annonce.getStatus() != Annonce.Status.ARCHIVED) {
+        if (annonce.getStatus() != AnnonceStatus.ARCHIVED) {
             throw new BusinessException("Annonce must be ARCHIVED before deletion");
         }
 
-        annonceRepository.delete(id);
+        annonceRepository.delete(annonce);
         log.info("Deleted annonce id={} by user={}", id, currentUserId);
     }
-
-    // --- Business rules ---
 
     public boolean isAuthor(Long annonceId, User user) {
         Annonce annonce = annonceRepository.findById(annonceId)
@@ -144,27 +171,37 @@ public class AnnonceService {
     }
 
     private void checkNotPublished(Annonce annonce) {
-        if (annonce.getStatus() == Annonce.Status.PUBLISHED) {
+        if (annonce.getStatus() == AnnonceStatus.PUBLISHED) {
             throw new BusinessException("A PUBLISHED annonce cannot be modified");
         }
     }
 
-    private Annonce.Status parseStatus(String statusStr) {
+    private void checkIsAdmin() {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        if (auth == null) {
+            throw new ForbiddenException("Authentication required");
+        }
+        Collection<? extends GrantedAuthority> authorities = auth.getAuthorities();
+        boolean isAdmin = authorities.stream()
+                .anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
+        if (!isAdmin) {
+            throw new ForbiddenException("Only ADMIN can archive annonces");
+        }
+    }
+
+    private AnnonceStatus parseStatus(String statusStr) {
         try {
-            return Annonce.Status.valueOf(statusStr.toUpperCase());
+            return AnnonceStatus.valueOf(statusStr.toUpperCase());
         } catch (IllegalArgumentException e) {
             throw new BusinessException("Invalid status: " + statusStr);
         }
     }
 
-    private void validateStatusTransition(Annonce.Status current, Annonce.Status next) {
-        // DRAFT -> PUBLISHED or ARCHIVED
-        // PUBLISHED -> ARCHIVED only
-        // ARCHIVED -> nothing
-        if (current == Annonce.Status.ARCHIVED) {
+    private void validateStatusTransition(AnnonceStatus current, AnnonceStatus next) {
+        if (current == AnnonceStatus.ARCHIVED) {
             throw new BusinessException("An ARCHIVED annonce cannot change status");
         }
-        if (current == Annonce.Status.PUBLISHED && next == Annonce.Status.DRAFT) {
+        if (current == AnnonceStatus.PUBLISHED && next == AnnonceStatus.DRAFT) {
             throw new BusinessException("Cannot revert PUBLISHED annonce to DRAFT");
         }
     }
